# rez-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  run_qml.py
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md  qml-python.instructions.md
.github/workflows/: python-application.yml
docs/: design.md  rez-knowledge.md
qmltypes/: README  metadata.json
qmltypes/RezManager/: qmldir  qmltyperegistrations1-0.cpp  types1-0.json  types1-0.qmltypes
src/rez_manager/: __init__.py  __main__.py  app.py  exception_hook.py  exceptions.py  logging_config.py  qtquickcontrols2.conf  rc_resources.py  resources.qrc  runtime.py  system_env_vars.json
src/rez_manager/adapter/: __init__.py  context.py  packages.py  storage.py  utils.py
src/rez_manager/data/: __init__.py  system_env_vars.json
src/rez_manager/hooks/: hook-rez.py  hook-rez_manager.py
src/rez_manager/models/: __init__.py  context_preview.py  launch_target.py  project.py  rez_context.py  settings.py
tests/: __init__.py  test_models.py
tests/adapter/: conftest.py  test_context_launch_adapter.py  test_context_preview_adapter.py  test_package_adapter.py
tests/models/: test_data_models.py  test_launch_target_catalog.py
tests/persistence/: test_storage.py
tests/runtime/: test_exception_hook.py  test_logging.py
tests/ui/: test_context_launcher.py  test_context_preview.py  test_context_thumbnail.py  test_launch_target_model.py  test_log_viewer.py  test_main_window_models.py  test_package_manager.py  test_settings_controller.py
(+93 files in other folders)
