[project]
name = "rez-manager"
version = "0.1.0"
description = "A GUI tool for managing Rez package environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.9.6",
    "pyside6>=6.9",
    "rez>=3.0",
]

[project.scripts]
rez-manager = "rez_manager.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rez_manager"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
